--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     }
 
     async function syncFromGitHub() {
-        const githubRawUrl = 'https://paulrclay.github.io/19Dunfield/Stations.txt';
+        const githubRawUrl = 'https://raw.githubusercontent.com/PaulRClay/19Dunfield/main/Stations.txt';';
         try {
             const response = await fetch(githubRawUrl);
             if (!response.ok) throw new Error('Could not fetch file');
@@ -463,4 +463,5 @@
 </body>
 
 </html>
+
 
